--- a/content/abnt/index.tex
+++ b/content/abnt/index.tex
@@ -231,7 +231,7 @@ Para a análise estatística, foi necessário utilizar um
 de dados que permitiram gerar insights significativos 
 sobre o comportamento do usuário.
 
-\begin{lstlisting}[float=htb, style=latexStyle, caption={Tabela}, label=lst:loanword]
+\begin{lstlisting}[float=htb, style=latexStyle, caption={Estrangeirismos}, label=lst:loanword]
 Para a análise estatística, foi necessário utilizar um 
 \foreign{dataset} abrangente, contendo uma grande quantidade 
 de dados que permitiram gerar insights significativos 
