Fix typo in binary prefix example in index.tex

--- a/content/misc/index.tex
+++ b/content/misc/index.tex
@@ -235,7 +235,7 @@ Também existem alguns macros abreviados, no caso anterior, poderíamos escrever
 Os prefixos como quilo, mega, e giga também estão definidos e podem ser usados normalmente, para obter  
 \unit{\kilo\gram}, usa-se \verb|\unit{\kilo\gram}|. 
 
-Prefixos binários também estão disponíveis (kibi, mebi, gibi, etc), assim como macros para bit e byte, por exemplo: \verb|\unit[per-mode=symbol]{\mibi\byte\per\second}|, produz \unit[per-mode=symbol]{\kibi\byte\per\second}.
+Prefixos binários também estão disponíveis (kibi, mebi, gibi, etc), assim como macros para bit e byte, por exemplo: \verb|\unit[per-mode=symbol]{\mibi\byte\per\second}|, produz \unit[per-mode=symbol]{\mibi\byte\per\second}.
 
 \subsection{Quantidades}
 
